# dogsoap

./: .justfile  Cargo.toml  README.md
src/: action.rs  bevy.rs  condition.rs  cost.rs  effect.rs  errors.rs  fact.rs  goal.rs  lib.rs  plan.rs  planner.rs  value.rs  world.rs
src/simple/: factmap.rs  mod.rs
