[package]
name = "dogsoap"
version = "0.2.0-alpha.1"
edition = "2024"
description = "Data-Oriented, Simple, Goal-Oriented Action Planning"
license = "MIT OR Apache-2.0"
authors = ["Amy Gilhespy <amyogilhespy@gmail.com>"]
repository = "https://github.com/AmyGilhespy/dogsoap"

[dependencies]
bevy = { version = "0.18.0", optional = true, default-features = false }
pathfinding = "4.14.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
thiserror = "2.0.18"

[features]
default = []
bevy = ["dep:bevy"]
serde = ["dep:serde"]
