[package]
name = "dogsoap"
version = "0.12.0-alpha.1"
edition = "2024"
description = "Data-Oriented, Simple, Goal-Oriented Action Planning"
license = "MIT OR Apache-2.0"
authors = ["Amy Gilhespy <amyogilhespy@gmail.com>"]
categories = ["games", "game-development"]
keywords = ["goap", "dogoap", "ai", "bevy"]
repository = "https://github.com/AmyGilhespy/dogsoap"

[dependencies]
bevy = { version = "0.18.0", optional = true, default-features = false }
hashbrown = { version = "0.16.1", optional = true, features = ["serde"] }
pathfinding = "4.14.0"
serde = { version = "1.0.228", optional = true, features = ["derive"] }
thiserror = "2.0.18"

[features]
default = ["simple"]
bevy = ["dep:bevy"]
serde = ["dep:serde"]
simple = ["hashbrown"]
